<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/holo_blue_dark"
    android:orientation="vertical">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_gravity="top"
        android:layout_marginTop="@dimen/dimen_100dp"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Set_your_location"
            android:textAlignment="center"
            android:textColor="@color/holo_white_dark"
            android:textSize="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/text_location"
            android:textAlignment="center"
            android:textColor="@color/holo_white_dark"
            android:textSize="@dimen/dimen_18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imageViewLacation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_100dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:transitionName="@string/transition_title_image"
            app:srcCompat="@drawable/ic_action_location" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewLacation"
            android:layout_marginTop="@dimen/dimen_10dp"
          >

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViweLocateMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:text="@string/locate_me"
                android:textAlignment="center"
                android:textColor="@color/holo_white_dark"
                android:textSize="@dimen/dimen_18sp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editTextLocateMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:hint="@string/locate_me"
                android:maxLines="4"
                android:textColor="@color/holo_white_dark"
                android:textSize="@dimen/dimen_18sp"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/linearLayout2"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/dimen_100dp"
            android:layout_height="wrap_content">
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textViewNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/Avenir"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_7dp"
        android:text="Next"
        android:textAlignment="center"
        android:textColor="@color/holo_white_dark"
        android:textSize="@dimen/dimen_14sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textViewNext"
        app:srcCompat="@drawable/ic_action_next" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
</RelativeLayout>

